--- a/sjy/src/components/PhoneItem/PhoneItem.module.scss
+++ b/sjy/src/components/PhoneItem/PhoneItem.module.scss
@@ -4,13 +4,14 @@
 	justify-content: space-between;
 	border: 1px solid #495057;
 	padding: 20px;
-}
 
-.phoneitem + .phoneitem {
+
+// .phoneitem + .phoneitem 
+  & + & {
 	margin-top: 15px;
-}
+  }
 
-.phone_item_right button {
+  .phone_item_right button {
 	color: #fa5252;
 	font-size: 15px;
 	font-weight: bold;
@@ -18,4 +19,5 @@
 	border: none;
 	outline: none;
 	cursor: pointer;
+  }
 }
